# rpi4_ros2_system_bobtail

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  system_bobtail.arm64.repos  system_bobtail.repos
docs/: deployment.md  local_verification.md  node_development_architecture.md  node_development_cpp.md  node_development_python.md  pi4_host_toolchain_setup.md  rpi4-mpu6050_imu_bridge_plan.md  rpi4-ssd1306_display__plan.md
host/: README.md
host/cpp/: CMakeLists.txt
host/cpp/examples/led_blink/: CMakeLists.txt  main.cpp
host/python/: README.md
host/python/examples/: led_blink.py
host/rust/: Cargo.toml
host/rust/examples/led_blink/: Cargo.toml
host/rust/examples/led_blink/src/: main.rs
host/scripts/: deploy_and_build.sh  gen_display_frame.py  run_disp_writer.sh  run_led_blink.sh
host/tmpfiles.d/: disp-shm.conf
src/bobtail_pubsub/: package.xml  setup.cfg  setup.py
src/bobtail_pubsub/bobtail_pubsub/: publisher_member_function.py  subscriber_member_function.py
src/bobtail_pubsub_cpp/: CMakeLists.txt  package.xml
src/bobtail_pubsub_cpp/src/: publisher_member_function.cpp  subscriber_member_function.cpp
src/display_bridge/: package.xml  setup.cfg  setup.py
src/display_bridge/display_bridge/: display_bridge_node.py
src/display_bridge_cpp/: CMakeLists.txt  package.xml
src/display_bridge_cpp/src/: display_bridge_node.cpp
