<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>display_bridge_cpp</name>
  <version>0.0.0</version>
  <description>SSD1306 表示ブリッジ（ROS2 → tmpfs 書き込み）の雛形 C++ 版。ホスト側 disp-writer が読む。</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <!-- 実装時に必要な型を追記する: <depend>sensor_msgs</depend> 等 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
